examples/type_system/failing/152_array_literal_callarg_conflict_prefers_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/152_array_literal_callarg_conflict_prefers_e300.flx
// error[E300]: Type Mismatch
//
// I found a type mismatch.
//
//   examples/type_system/failing/152_array_literal_callarg_conflict_prefers_e300.flx:31:30
//    |
// 31 |     let _x = takes_ints([|1, "two"|])
//    |                              ^^^^^
//    |                              ----- this expression has type `String`
//
//    |                              ----- this type mismatch is reported here
//
// Note:
//   expected type: Int
//   found type: String
//   the conflicting types meet at this expression
//
// Help:
//   These two types are not compatible.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn takes_ints(xs: Array<Int>) -> Int { 0 }

fn main() -> Unit {
    let _x = takes_ints([|1, "two"|])
}
